@@ -21,7 +21,7 @@ Version bump guide:
   `------------- Denotes a client rewrite.
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.14.2.25 2003/04/27 22:34:15 andreasb Exp $
+Version change log: $Id: CHANGES.txt,v 1.14.2.26 2003/05/16 23:25:54 bdragon Exp $
 ==========================================================================
 
 2.9000
@@ -31,6 +31,7 @@ Version change log: $Id: CHANGES.txt,v 1.14.2.25 2003/04/27 22:34:15 andreasb Ex
             new: x86: detect Celeron with Tualatin core / brand id 1 (#3246)
             imp: x86: changed some preselected cores (#3233)
             new: sparc: rc5-72 assembly cores by Andreas Beckmann
+            new: decunix: initial Lurk support
 
 2.9005-483  fix: x86: re-added SS-2 core - new version fixes bug #3187
             fix: ppc: no longer coredumps while resolving under Linux (#3213)
